# image_processor

./: BMP.cpp  BMP.hpp  CMakeLists.txt  image.cpp  image.hpp  image_processor.cpp  pixel.cpp  pixel.hpp  test.cpp
filter/: apply_matrix.cpp  apply_matrix.hpp  change_pixels.cpp  change_pixels.hpp  combined_filter.cpp  combined_filter.hpp  crop.cpp  crop.hpp  edge_detection.cpp  edge_detection.hpp  filter.hpp  gaussian_blur.cpp  gaussian_blur.hpp  grayscale.cpp  grayscale.hpp  negative.cpp  negative.hpp  sharpening.cpp  sharpening.hpp
filters/: filter.hpp
